# task-generator

./: .gitignore  Cargo.toml  MEMO.md  README.md
src/: data_generator.rs  lib.rs  main.rs  mode.rs  pdf_handler.rs  task_builder.rs  util.rs
