[package]
authors = ["kawadumax <kazmax7@gmail.com>"]
edition = "2018"
name = "task-generator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.19"
gimei = "0.2"
glob = "0.3.0"
once_cell = "1.5.2"
printpdf = "0.3.2"
